Related: tdf#157726 restore try/catch block

before

commit de42529ca9107b24b6367b40801300416d4a51a1
Date:   Wed Sep 6 14:49:19 2023 +0200

    replace svx::PropertyValueProvider with simpler implementation

PropertyChangeNotifier::notifyPropertyChange had a try/catch, but
afterwards SvxShape::notifyPropertyChange doesn't

Change-Id: If78732bea08d0f760b3b616ad55d28d40fa50fcf
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/158026
Tested-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>